# sem3lab4

./: .clang-format  BookEdition.cpp  BookEdition.hpp  CMakeLists.txt  ClassesChart.wsd  FictionEdition.cpp  FictionEdition.hpp  LearningEdition.cpp  LearningEdition.hpp  List.cpp  List.hpp  ScientificEdition.cpp  ScientificEdition.hpp  Table.cpp  Table.hpp  Test.cpp  dialogMain.cpp  main.cpp  memleak_test_basic.hpp  tests.cpp
html/: BookEdition_8hpp_source.html  FictionEdition_8hpp_source.html  LearningEdition_8hpp_source.html  ScientificEdition_8hpp_source.html  Table_8hpp_source.html  annotated.html  classBookEdition-members.html  classBookEdition.html  classBookEditionWrapper-members.html  classBookEditionWrapper.html  classBookEdition__inherit__graph.map  classBookEdition__inherit__graph.md5  classFictionEdition-members.html  classFictionEdition.html  classFictionEdition__coll__graph.md5  classFictionEdition__inherit__graph.map  classLearningEdition-members.html  classLearningEdition.html  classLearningEdition__coll__graph.md5  classLearningEdition__inherit__graph.map  classScientificEdition-members.html  classScientificEdition.html  classScientificEdition__coll__graph.map  classScientificEdition__coll__graph.md5  classTable-members.html  classTable.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  (+1 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  related_0.js  related_1.js  related_2.js  searchdata.js  typedefs_0.js
latex/: annotated.tex  classBookEdition.tex  classBookEditionWrapper.tex  classBookEdition__inherit__graph.md5  classFictionEdition.tex  classFictionEdition__coll__graph.md5  classLearningEdition.tex  classLearningEdition__coll__graph.md5  classScientificEdition.tex  classScientificEdition__inherit__graph.md5  classTable.tex  hierarchy.tex  refman.tex
